# SchemaLang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
Embedded/: CMakeLists.txt  EmbeddingCompiler
Embedded/src/: EmbeddedResources.cpp  EmbeddedResources.hpp  EmbeddedResourcesEmbeddedVFS.cpp  EmbeddedResourcesEmbeddedVFS.hpp
embedded_resources/: SchemaGenerator.hpp
embedded_resources/Cpp/: Has{{Language}}Schema.hpp
embedded_resources/Cpp/enum/: {{enum}}Schema.cpp  {{enum}}Schema.hpp
embedded_resources/Cpp/struct/: {{struct}}Schema.cpp  {{struct}}Schema.hpp
embedded_resources/JSON/Cpp/: includes.list
embedded_resources/JSON/Cpp/Functions/: JSONSerialization.funct
embedded_resources/MySQL/Cpp/: includes.list
embedded_resources/MySQL/Cpp/Functions/: MySQLOperations.funct
embedded_resources/MySQL/Cpp/Variables/: mysql_session.variable
embedded_resources/SQLite/Cpp/: includes.list
embedded_resources/SQLite/Cpp/Functions/: SQLiteCreateTable.funct  SQLiteDelete.funct  SQLiteInsert.funct  SQLiteSelect.funct  SQLiteSetDatabase.funct  SQLiteUpdate.funct
embedded_resources/SQLite/Cpp/Setters/: update.line
embedded_resources/SQLite/Cpp/Variables/: database.variable
embedded_resources/SQLite/enum/: {{enum}}_create_table.sql
embedded_resources/SQLite/struct/: {{struct}}_create_table.sql
example/: SCP.schema  Simple.schemalang
example/Schemas/Cpp/: NodeSchema.cpp  NodeSchema.hpp
example/Schemas/JSON/: Node.schema.json
include/: BaseTypes.hpp  ConfigDefinition.hpp  DynamicGeneratorInterface.hpp  EnumDefinition.hpp  ForwardDeclerations.hpp  FunctionDefinition.hpp  Generator.hpp  MemberVariableDefinition.hpp  PrivateVariableDefinition.hpp  ProgramStructure.hpp  ReferenceDefinition.hpp  StructDefinition.hpp  TypeDefinition.hpp
include/ArgParser/: ArgParser.hpp
include/BuiltIn/Generators/CppGenerator/: CppGenerator.hpp
include/BuiltIn/Generators/JavaGenerator/: JavaGenerator.hpp
include/BuiltIn/Generators/JsonGenerator/: JsonGenerator.hpp
include/BuiltIn/Generators/LuaGenerator/: LuaGenerator.hpp
include/BuiltIn/Generators/MySqlGenerator/: MySqlGenerator.hpp
include/BuiltIn/Generators/SqliteGenerator/: SqliteGenerator.hpp
include/BuiltInGenerators/: CppGenerator.hpp  JavaGenerator.hpp  JsonGenerator.hpp  LuaGenerator.hpp  MySqlGenerator.hpp  SqliteGenerator.hpp
include/ForiegnKeyDefinition/: ForiegnKeyDefinition.hpp
include/FunctionDefinition/: FunctionDefinition.hpp
include/Generator/: Generator.hpp
include/MemberVariableDefinition/: MemberVariableDefinition.hpp
include/PrivateVariableDefinition/: PrivateVariableDefinition.hpp
include/ProgramStructure/: ProgramStructure.hpp
include/StructDefinition/: StructDefinition.hpp
src/: EnumDefinition.cpp  ProgramStructure.cpp  StructDefinition.cpp  TypeDefinition.cpp  main.cpp
src/BuiltIn/Generators/CppGenerator/: CppGenerator.cpp
src/BuiltIn/Generators/JavaGenerator/: JavaGenerator.cpp
src/BuiltIn/Generators/JsonGenerator/: JsonGenerator.cpp
src/BuiltIn/Generators/LuaGenerator/: LuaGenerator.cpp
src/BuiltIn/Generators/MySqlGenerator/: MySqlGenerator.cpp
src/BuiltIn/Generators/SqliteGenerator/: SqliteGenerator.cpp
src/BuiltInGenerators/: CppGenerator.cpp  JavaGenerator.cpp  JsonGenerator.cpp  LuaGenerator.cpp  MySqlGenerator.cpp  SqliteGenerator.cpp
src/EnumDefinition/: EnumDefinition.cpp
src/ProgramStructure/: ProgramStructure.cpp
src/StructDefinition/: StructDefinition.cpp
src/TypeDefinition/: TypeDefinition.cpp
